# ghostdog-cv

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy-api.yml
api/: cv_loader.py  main.py  requirements.txt
cli/: display.py  loader.py  main.py
cli/data/: cv.yaml
data/: cv.yaml
docs/: backend-requirements.md
docs/superpowers/plans/: 2026-03-20-frontend-web.md
docs/superpowers/specs/: 2026-03-20-ghostdog-cv-multi-render-design.md
web/: index.html  package-lock.json
web/src/: App.tsx  main.tsx
web/src/api/: chat.ts  client.ts  cv.ts
web/src/components/cv/: EducationCard.tsx  ExperienceCard.tsx  ProjectCard.tsx  SkillGroup.tsx
web/src/components/layout/: Footer.tsx  Header.tsx  PageLayout.tsx
web/src/components/ui/: Card.tsx  ChatBubble.tsx  ErrorMessage.tsx  Loader.tsx  Tag.tsx
web/src/hooks/: useApi.ts
web/src/pages/: ApiDoc.tsx  Chat.tsx  CliDoc.tsx  CvView.tsx  Home.tsx
web/src/styles/base/: global.css  reset.css  variables.css
web/src/styles/components/: card.css  chat-bubble.css  error.css  loader.css  tag.css
web/src/styles/layout/: footer.css  header.css  page-layout.css
web/src/styles/pages/: apidoc.css  chat.css  clidoc.css  cv.css  home.css
web/src/types/: chat.ts  cv.ts
