[metadata]
name = ghostdog-cv
version = 1.0.0
description = CV multi-rendu de GhostDog (Arthur Seguret) — version terminal
author = Arthur Seguret
author_email = ghostdogthe1@gmail.com
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    typer>=0.9
    rich>=13.0
    pyyaml>=6.0
    requests>=2.28

[options.packages.find]
include = cli*

[options.package_data]
cli.data = *.yaml

[options.entry_points]
console_scripts =
    ghostdog-cv = cli.main:app
